feat: create controller & schema & route for create challenge. Validation by zod . Create documentation in swagger docs.
